--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <!-- [Head] start -->
 <head>
-  <title>Home</title>
+  <title>LinguAI</title>
   <!-- [Meta] -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description"
-    content="Light Able admin and dashboard template offer a variety of UI elements and pages, ensuring your admin panel is both fast and effective." />
-  <meta name="author" content="phoenixcoded" />
+  <meta name="description" content="LinguAI is a versatile language tool that harnesses the power of artificial intelligence to enhance your writing and communication. This app offers advanced grammar checking, real-time translations, and language learning assistance." />
+  <meta name="author" content="Krunoslav Husak" />
 
   <!-- [Favicon] icon -->
   <link rel="icon" href="%sveltekit.assets%/images/favicon.svg" type="image/x-icon" />
@@ -47,10 +46,9 @@
   <nav class="pc-sidebar">
     <div class="navbar-wrapper">
       <div class="m-header">
-        <a href="../dashboard/index.html" class="b-brand text-primary">
-          <!-- ========   Change your logo from here   ============ -->
+        <a href="/" class="b-brand text-primary">
           <img src="%sveltekit.assets%/images/logo-dark.svg" alt="logo image" class="logo-lg" />
-          <span class="badge bg-brand-color-2 rounded-pill ms-2 theme-version">v1.0</span>
+          <span class="badge bg-brand-color-2 rounded-pill ms-2 theme-version">v0.1</span>
         </a>
       </div>
       <div class="navbar-content">
